US1701 - Metric QV CSS, added min height to notes textarea to prevent scrollbar

--- a/app/scss/calendar/quickview/_metricQuickView.scss
+++ b/app/scss/calendar/quickview/_metricQuickView.scss
@@ -65,6 +65,7 @@
                 textarea {
                     width: 497px;
                     max-width: 497px;
+                    min-height: 57px;
                 }
             }
 
